# LabMath

./: CMakeLists.txt  Lab1. Andrianov.docx  Problem.md  README.md  main.cpp
